<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memo_proc01</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_new">新規</string>
    <string name="btn_setting">編集</string>
    <string name="hint_title_text">タイトルを入力してください</string>
    <string name="hint_text">テキストを入力してください</string>
    <string name="btn_save">保存</string>
    <string name="btn_return">戻る</string>
    <string name="del_text">削除モード</string>
</resources>
