<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ken46.memo_proc01.MainActivity" >

    <ListView
        android:id="@+id/memoList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btNew" >

    </ListView>

    <Button
        android:id="@+id/btSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/memoList"
        android:layout_alignParentTop="true"
        android:text="@string/btn_setting" />

    <Button
        android:id="@+id/btNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/memoList"
        android:text="@string/btn_new" />

    <TextView
        android:id="@+id/tvDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btNew"
        android:layout_alignBottom="@+id/btNew"
        android:layout_centerHorizontal="true"
        android:text="@string/del_text"
        android:textColor="#330000" />

</RelativeLayout>
